Fixing spacing issues

--- a/src/templates/ensembles.scss
+++ b/src/templates/ensembles.scss
@@ -50,6 +50,6 @@
   }
 
   @include desktop {
-    margin-top: 0.75rem;
+    margin: 0.75rem 0;
   }
 }
