--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -8,6 +8,7 @@
 
 .landing-content {
   position: relative;
+  height: 100vh;
   height: calc(100vh - 2rem);
   width: 100vw;
 
@@ -57,6 +58,10 @@
     box-shadow: none;
 
     bottom: 2vh;
+  }
+
+  @include desktop {
+    height: calc(100vh - #{$desktop-header-height} - 2rem);
   }
 }
 
